--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -43,7 +43,7 @@
                         android:paddingTop="8dp"
                         android:paddingLeft="5dp"
                         android:paddingRight="5dp"
-                        android:src="@drawable/ic_clock"
+                        android:src="@drawable/ic_user"
                         />
                     <LinearLayout
                         android:layout_width="match_parent"
