--- a/app/src/main/res/layout/private_user_offers_fragment.xml
+++ b/app/src/main/res/layout/private_user_offers_fragment.xml
@@ -22,14 +22,14 @@
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:layout_alignParentEnd="true"
-        android:layout_margin="20dp"
         android:layout_gravity="bottom"
 
+        android:layout_marginBottom="20dp"
+        android:layout_marginEnd="23dp"
         android:clickable="true"
         android:src="@drawable/offer_white"
         app:backgroundTint="#000"
         app:borderWidth="0dp"
         app:elevation="6dp"
-        app:fabSize="normal"
-        android:layout_alignParentRight="true" />
+        app:fabSize="normal" />
 </RelativeLayout>
