--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -4,8 +4,8 @@
     <style name="AppTheme" parent="Theme.AppCompat.Light.NoActionBar">
         <!-- Customize your theme here. -->
         <item name="colorPrimary">#FFF</item>
-        <item name="colorPrimaryDark">#000</item>
-        <item name="colorAccent">#000</item>
+        <item name="colorPrimaryDark">#504037</item>
+        <item name="colorAccent">#504037</item>
         <item name="android:timePickerDialogTheme">@style/CustomSpinnerStyle</item>
     </style>
 
@@ -20,7 +20,12 @@
         <item name="actionMenuTextColor">#FFFF</item>
 
     </style>
+    <style name="CustomStyleSignUp">
+        <item name="android:background">#FFFF</item>
+        <item name="colorControlNormal">#FFFF</item>
+        <item name="actionMenuTextColor">#FFFF</item>
 
+    </style>
     <style name="CustomSpinnerStyle">
         <item name="android:numbersTextColor">#de0808</item>
         <item name="android:numbersSelectorColor">#88f20808</item>
