--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -15,6 +15,7 @@
     <style name="AppTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
 
     <style name="CustomStyle">
+
         <item name="android:background">#0a0808</item>
         <item name="colorControlNormal">#FFFF</item>
         <item name="actionMenuTextColor">#FFFF</item>
@@ -36,6 +37,10 @@
     <style name="CustomStylePopUp">
         <item name="android:background">#ffffff</item>
         <item name="android:textColor">#000000</item>
+    </style>
+
+    <style name="NavigationView" >
+        <item name="android:listDivider">@color/colorLightGrey</item>
     </style>
 
 </resources>
