--- a/app/src/main/res/layout/activity_landing_page.xml
+++ b/app/src/main/res/layout/activity_landing_page.xml
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout
     android:layout_width="match_parent"
-    android:background="#504037"
+    android:background="@drawable/animation"
     android:layout_height="match_parent"
+
     xmlns:android="http://schemas.android.com/apk/res/android" >
 
     <TextView
