--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -3,8 +3,8 @@
     <!-- Base application theme. -->
     <style name="AppTheme" parent="Theme.AppCompat.Light.NoActionBar">
         <!-- Customize your theme here. -->
-        <item name="colorPrimary">#FFF</item>
-        <item name="colorPrimaryDark">#504037</item>
+        <item name="colorPrimary">@color/colorPrimary</item>
+        <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">#504037</item>
         <item name="android:timePickerDialogTheme">@style/CustomSpinnerStyle</item>
     </style>
@@ -16,7 +16,7 @@
 
     <style name="CustomStyle">
 
-        <item name="android:background">#0a0808</item>
+        <item name="android:background">@color/colorPrimary</item>
         <item name="colorControlNormal">#FFFF</item>
         <item name="actionMenuTextColor">#FFFF</item>
 
@@ -40,6 +40,8 @@
     </style>
 
     <style name="NavigationView" >
+        <item name="android:windowTranslucentStatus">true</item>
+        <item name="android:windowTranslucentNavigation">true</item>
         <item name="android:listDivider">@color/colorLightGrey</item>
     </style>
 
