--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -11,22 +11,23 @@
 
 
 
-    <LinearLayout
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical">
-
-        <include layout="@layout/toolbar" />
+        android:layout_height="match_parent">
+        <include layout="@layout/toolbar"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            />
 
         <FrameLayout
+            android:layout_below="@+id/toolbar"
             android:id="@+id/content_layout"
             android:layout_width="match_parent"
             android:layout_height="match_parent">
 
-
         </FrameLayout>
-    </LinearLayout>
 
+    </RelativeLayout>
 
     <android.support.design.widget.NavigationView
         android:id="@+id/nav_view"
